sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '(' expected but identifier found.
    for i <- 1 to getNombreValeurs()-2 {
        ^AlgBubbleSort1:12: error: '(' expected but identifier found.
    if c == 0 {
       ^AlgBubbleSort1:15: error: illegal start of simple expression
  }
  ^